--- a/Inventory Management App/Inventory Management App.csproj
+++ b/Inventory Management App/Inventory Management App.csproj
@@ -61,6 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateOrganization.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateOrganization.Designer.cs">
+      <DependentUpon>CreateOrganization.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CreateOrganization.resx">
+      <DependentUpon>CreateOrganization.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
